Project SimpleBank {
  database_type: 'PostgreSQL'
  Note: '''
    # simple bank
  '''
}
Table "users" as U {
  username varchar [pk]
  role varchar [not null, default: 'depositor']
  hashed_password varchar [not null]
  full_name varchar [not null]
  email varchar [not null, unique]
  is_email_verified bool [not null, default: false]
  pssword_changed_at timestamptz [not null,default: '0001-01-01 00:00:00Z' ]
  "created_at" timestamptz [not null, default: `now()`]

}

Table verify_emails {
  id bigserial [pk]
  username varchar [ref: > U.username, not null]
  email varchar [not null]
  secret_code varchar [not null]
  is_used bool [not null, default: false]
  created_at timestamptz [not null, default: `now()`]
  expired_at timestamptz [not null, default: `now() + interval '15 minutes'`]
}

Table "accounts" {
  "id" bigserial [pk, increment]
  "owner" varchar [not null, ref: > U.username]
  "balance" bigint [not null]
  "currency" varchar [not null]
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  owner
  (owner,currency) [unique]
}
}

Table "entries" {
  "id" bigserial [pk, increment]
  "account_id" bigint
  "amount" bigint [not null, note: 'can be nagative or posetive']
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  account_id
}
}

Table "transfers" {
  "id" bigserial [pk, increment]
  "from_account_id" bigint
  "to_account_id" bigint
  "amount" bigint [not null, note: 'must be posetive']
  "created_at" timestamptz [not null, default: `now()`]

Indexes {
  from_account_id
  to_account_id
  (from_account_id, to_account_id)
}
}

 TABLE "sessions" {
     "id"       uuid    [PRIMARY KEY]
     "username" varchar [ref: > U.username,NOT NULL]
     "refresh_token" varchar [NOT NULL]
     "user_agent" varchar [NOT NULL]
     "client_ip" varchar [NOT NULL]
     "is_blocked" BOOLEAN   [NOT NULL, default:  false]
     "expires_at" timestamptz [NOT NULL]
     "created_at" timestamptz [not null, default: `now()`]
}



Ref:"accounts"."id" < "entries"."account_id"

Ref:"accounts"."id" < "transfers"."from_account_id"

Ref:"accounts"."id" < "transfers"."to_account_id"
